--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -2,6 +2,10 @@
   "name": "React Chrome Extension",
   "version": "1.0.0",
   "manifest_version": 3,
+  "action": {
+    "default_popup": "popup.html",
+    "default_title": "My popup"
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
